--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tic-Tac-Toe</title>
+    <title>Ta-Te-Ti</title>
     <style>
         table { border-collapse: collapse; }
         td { width: 100px; height: 100px; text-align: center; font-size: 2em; border: 1px solid #000; cursor: pointer; }
     </style>
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
+    <h1>Ta-Te-Ti</h1>
     <table id="board">
         <tr>
             <td onclick="makeMove(0, 0)"></td>
