--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </table>
     <script>
         let board = [["", "", ""], ["", "", ""], ["", "", ""]];
-        let currentPlayer = "X";
+        let currentPlayer = "X"; // Empieza el jugador X (humano)
 
         function makeMove(row, col) {
             if (board[row][col] === "") {
@@ -44,6 +44,9 @@
                     resetBoard();
                 } else {
                     currentPlayer = currentPlayer === "X" ? "O" : "X";
+                    if (currentPlayer === "O") {
+                        aiMove(); // Llama a la IA para que haga su movimiento
+                    }
                 }
             }
         }
@@ -74,6 +77,37 @@
             board = [["", "", ""], ["", "", ""], ["", "", ""]];
             const cells = document.querySelectorAll("td");
             cells.forEach(cell => cell.innerText = "");
+        }
+
+        function aiMove() {
+            // Obtiene las posiciones vacías
+            let emptyPositions = [];
+            for (let r = 0; r < 3; r++) {
+                for (let c = 0; c < 3; c++) {
+                    if (board[r][c] === "") {
+                        emptyPositions.push([r, c]);
+                    }
+                }
+            }
+
+            // Selecciona una posición aleatoria
+            let randomMove = emptyPositions[Math.floor(Math.random() * emptyPositions.length)];
+            let row = randomMove[0];
+            let col = randomMove[1];
+
+            // Realiza el movimiento de la IA
+            board[row][col] = "O";
+            document.getElementById("board").rows[row].cells[col].innerText = "O";
+
+            if (checkWinner()) {
+                alert("¡El jugador O (IA) gana!");
+                resetBoard();
+            } else if (isFull()) {
+                alert("¡Empate!");
+                resetBoard();
+            } else {
+                currentPlayer = "X"; // Vuelve al turno del jugador humano
+            }
         }
     </script>
 </body>
