--- a/index.html
+++ b/index.html
@@ -80,22 +80,28 @@
         }
 
         function aiMove() {
-            // Obtiene las posiciones vacías
-            let emptyPositions = [];
-            for (let r = 0; r < 3; r++) {
-                for (let c = 0; c < 3; c++) {
-                    if (board[r][c] === "") {
-                        emptyPositions.push([r, c]);
-                    }
-                }
+            // Primero, intenta ganar o bloquear al jugador
+            let move = findBestMove("O"); // Busca si la IA puede ganar
+            if (!move) {
+                move = findBestMove("X"); // Si no puede ganar, bloquea al jugador
             }
 
-            // Selecciona una posición aleatoria
-            let randomMove = emptyPositions[Math.floor(Math.random() * emptyPositions.length)];
-            let row = randomMove[0];
-            let col = randomMove[1];
+            // Si no hay jugadas ganadoras ni bloqueadoras, elige una posición aleatoria
+            if (!move) {
+                let emptyPositions = [];
+                for (let r = 0; r < 3; r++) {
+                    for (let c = 0; c < 3; c++) {
+                        if (board[r][c] === "") {
+                            emptyPositions.push([r, c]);
+                        }
+                    }
+                }
+                move = emptyPositions[Math.floor(Math.random() * emptyPositions.length)];
+            }
 
             // Realiza el movimiento de la IA
+            let row = move[0];
+            let col = move[1];
             board[row][col] = "O";
             document.getElementById("board").rows[row].cells[col].innerText = "O";
 
@@ -108,6 +114,23 @@
             } else {
                 currentPlayer = "X"; // Vuelve al turno del jugador humano
             }
+        }
+
+        // Función para encontrar la mejor jugada, ya sea para ganar o bloquear
+        function findBestMove(player) {
+            for (let r = 0; r < 3; r++) {
+                for (let c = 0; c < 3; c++) {
+                    if (board[r][c] === "") {
+                        board[r][c] = player;
+                        if (checkWinner()) {
+                            board[r][c] = "";
+                            return [r, c];
+                        }
+                        board[r][c] = "";
+                    }
+                }
+            }
+            return null;
         }
     </script>
 </body>
